--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,6 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -20,3 +14,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDE-specific files
+.idea/
+.vscode/
+*.iml
+*.ipr
+*.iws
+.settings
+.classpath
+.project
+.metadata
+
+# Maven stuff
+**/target/
+
+# The irritating thing that gets created every time you open any file in macOS
+.DS_Store
